# wallfuck

./: Cargo.toml  README.md  flake.nix  todo.txt
lib/: audio.rs  lib.rs  shader.wgsl  texture.rs
lib/audio/: dsp.rs  fft.rs  old_dsp.rs.bak  wav.rs
lib/audio/dsp/: effects.rs  generators.rs  mod.rs
math/: math.aux  math.tex  test.aux  test.tex
src/: main.rs
